refactor: Cars의 findWinners 승자 반환 코드 수정